fixed login button on mobile

--- a/client/src/css/header.css
+++ b/client/src/css/header.css
@@ -43,10 +43,17 @@ button:focus {
     /* height: 0px; */
     line-height: 10px !important;
   }
+
   .navbar-brand {
     position: absolute;
     top: 1rem;
     left: 1rem;
+  }
+
+  button.login-button {
+    position: absolute;
+    top: 0.7rem;
+    right: 1rem;
   }
 
   button.navbar-toggler {
